--- a/nginx.conf
+++ b/nginx.conf
@@ -2,24 +2,20 @@ upstream webapp {
     server intracen_api:8000;
 }
 
-upstream upstream_name {
-    server host:PORT;
-}
-
 server {
     listen 80;
     server_name localhost;
-}
 
-location / {
-    proxy_pass http://webapp;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header Host $host;
-    proxy_redirect off;    
-}
+    location / {
+        proxy_pass http://webapp;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+        proxy_redirect off;    
+    }
 
-location /media/ {
-    alis /app/uploads/;
+    location /uploads/ {
+        alias /app/uploads/;
+    }
 }
 
 
