--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -24,6 +24,23 @@ jobs:
             - name: Building containers
               run: docker-compose up -d --build
 
+    deploy:
+        name: Deploying on EC" via SSH
+        if: ${{github.event_name == 'push'}}
+        needs: [build-test]
+        runs-on: ubuntu-latest
+        steps:
+        - name: Deploying application on EC2
+          uses: appleboy/ssh-action@master
+          with:
+            host: ${{secrets.SSH_EC2_IP}}
+            username: ${{secrets.SSH_EC2_USER}}
+            key: ${{secrets.SSH_PRIVATE_KEY}}
+            passphrase: ${{secrets.SSH_PASSPHRASE}}
+            script: |
+                cd ~/.scripts
+                ./docker-ec2-deploy.sh
+
 
 
 
