--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -38,7 +38,7 @@ jobs:
             key: ${{secrets.SSH_PRIVATE_KEY}}
             passphrase: ${{secrets.SSH_PASSPHRASE}}
             script: |
-                cd ~/.scripts
+                cd ~/drf-react
                 ./docker-ec2-deploy.sh
 
 
