change to dir dfr-react/intracen

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -39,7 +39,7 @@ jobs:
             passphrase: ${{secrets.SSH_PASSPHRASE}}
             script: |
                 cd ~/drf-react
-                ./docker-ec2-deploys.sh
+                ./docker-ec2-deploy.sh
 
 
 
